# ros2-fleet-coordinator

./: .gitignore  BUGS.md  PROGRESS.md  README.md  SIMULATION_PLAN.md  STATUS.md  TECHNICAL_APPROACH.md
fleet_ws/src/fleet_bringup/: CMakeLists.txt  package.xml
fleet_ws/src/fleet_bringup/config/: demo_map.yaml
fleet_ws/src/fleet_bringup/launch/: demo.launch.py  sim_demo.launch.py
fleet_ws/src/fleet_bringup/rviz/: fleet_simulation.rviz
fleet_ws/src/fleet_bringup/scripts/: check_conflict_reservation.sh  check_planner_failure_path.sh  submit_demo_task.sh
fleet_ws/src/fleet_bringup/urdf/: simple_diffbot.urdf
fleet_ws/src/fleet_bringup/worlds/: fleet_demo.world
fleet_ws/src/fleet_manager/: CMakeLists.txt  package.xml
fleet_ws/src/fleet_manager/src/: fleet_manager_node.cpp
fleet_ws/src/fleet_msgs/: CMakeLists.txt  package.xml
fleet_ws/src/fleet_msgs/action/: ExecuteTask.action
fleet_ws/src/fleet_msgs/msg/: RobotState.msg  Task.msg  TaskAssignment.msg  TaskStatus.msg
fleet_ws/src/fleet_msgs/srv/: PlanRoute.srv  SubmitTask.srv
fleet_ws/src/fleet_runtime/: CMakeLists.txt  package.xml
fleet_ws/src/fleet_runtime/src/: fleet_visualization_node.cpp  goal_follower_node.cpp
fleet_ws/src/path_planner/: CMakeLists.txt  package.xml
fleet_ws/src/path_planner/src/: path_planner_node.cpp
fleet_ws/src/robot_agent/: CMakeLists.txt  package.xml
fleet_ws/src/robot_agent/src/: robot_agent_node.cpp
