<?xml version="1.0"?>
<package format="3">
  <name>fleet_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the ROS 2 fleet coordinator project.</description>
  <maintainer email="bruce@example.com">Bruce</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
