<?xml version="1.0"?>
<package format="3">
  <name>fleet_manager</name>
  <version>0.1.0</version>
  <description>Central coordinator node for a ROS 2 fleet project.</description>
  <maintainer email="bruce@example.com">Bruce</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fleet_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
